# 2.0.9
- Remember currently selected wonder on home page